feat: add TTS streaming, auth improvements, and frontend enhancements
- Add useTTS hook with AudioContext for PCM playback
- Add SSE utilities with token authentication
- Add fetch-event-source and element-plus packages
- Add register page and login API integration
- Fix CORS config with default value
- Add FastJson2 dependency
- Update GlobalExceptionHandler with proper Content-Type headers
- Add node_modules to gitignore and remove from tracking
- Connect editor text to TTS panel